# CoEvo

./: .gitignore  ARCHITECTURE_DIAGRAM.md  LLMBase.py  Makefile  PIPELINE_EXPLANATION.md  README.md  SELF_IMPROVING_RAG.md  batch_experiment.py  demo_financebench.py  demo_self_improving.py  dspy_rag.py  evaluation.py  generation.py  gepa_prompt.py  memory_system.py  optimize_chunk_size.py  preprocess_crag.py  preprocessor.py  prompt_optimization.py  pyproject.toml  quickstart_self_improving.py  rag_pipeline.py  reranker.py  retrieval.py  run_optimization.py  run_research_experiment.py  self_improving_rag.py  simple_example.py  test_generator_gepa.py  test_query_planner_gepa.py  test_reranker_gepa.py
dspy/: dspy_optimization.py  dspy_rag.py
gepa_adapters/: __init__.py  base.py  generator_adapter.py  query_planner_adapter.py  reranker_adapter.py
modules/: __init__.py  base.py  chunk_optimizer.py  pipeline.py  preprocessor.py
modules/evaluation/: __init__.py  metrics.py  ragas_eval.py
modules/generator/: __init__.py  generator.py
modules/generator/prompts/: seed.txt
modules/query_planner/: __init__.py  planner.py  retrieval.py
modules/query_planner/prompts/: seed.txt
modules/reranker/: __init__.py  reranker.py
modules/reranker/prompts/: seed.txt
training/: __init__.py  crag_benchmark.py
