[project]
name = "rag-optimization"
version = "0.1.0"
description = "Modular RAG optimization pipeline with GEPA"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "*.egg-info",
    "build",
    "dist",
    "experiments",
    "data",
]

[tool.ruff.lint]
# Enable basic clean code rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint rules
    "RUF",    # ruff-specific rules
]

# Ignore specific rules that may be too strict for this project
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments (common in ML/data pipelines)
    "PLR2004",  # magic value comparisons
    "RET504",   # unnecessary variable assignment before return
    "SIM108",   # use ternary operator (sometimes less readable)
    "ARG001",   # unused function argument (common in abstract methods)
    "ARG002",   # unused method argument
]

# Allow fix for all enabled rules (use --fix flag)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Relax rules in test files
"test_*.py" = ["PLR2004", "ARG001"]
"*_test.py" = ["PLR2004", "ARG001"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["modules", "gepa_adapters"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.pylint]
# Adjust pylint rules
max-args = 8  # Allow up to 8 arguments
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
